tests/ui/traits/bound/on-structs-and-enums-in-impls.stderr
error[E0277]: the trait bound `u16: Trait` is not satisfied
  --> $DIR/on-structs-and-enums-in-impls.rs:20:6
   |
LL | impl PolyTrait<Foo<u16>> for Struct {
   |      ^^^^^^^^^^^^^^^^^^^ the trait `Trait` is not implemented for `u16`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/on-structs-and-enums-in-impls.rs:1:1
   |
LL | trait Trait {}
   | ^^^^^^^^^^^
note: required by a bound in `Foo`
  --> $DIR/on-structs-and-enums-in-impls.rs:3:14
   |
LL | struct Foo<T:Trait> {
   |              ^^^^^ required by this bound in `Foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
